--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,28 +1,4 @@
 @import "variables";
+@import "globals";
 @import "header";
 @import "main";
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: "Commissioner", sans-serif;
-}
-
-// Flexbox
-
-.flex {
-  display: flex;
-
-  &-jc-sb {
-    justify-content: space-between;
-  }
-
-  &-ai-c {
-    align-items: center;
-  }
-}
