--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -18,6 +18,10 @@ html {
     justify-content: space-between;
   }
 
+  &-jc-c {
+    justify-content: center;
+  }
+
   &-ai-c {
     align-items: center;
   }
