--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -7,16 +7,49 @@
     background-color: $white;
     border-radius: 10px;
     border: $lightGray solid 1px;
+    width: 87.2%;
+    text-align: center;
 
     &__logo {
       position: absolute;
       top: -2.8rem;
       left: calc(50% - 2.8rem);
     }
-  }
 
-  &--container {
-    width: 87.2%;
-    margin: auto;
+    h1 {
+      margin: calc(3rem + 2.8rem) auto 0 auto;
+      width: 192px;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.4rem;
+      color: $gray;
+      margin: 2.8rem auto 0 auto;
+      width: 270px;
+    }
+
+    &__div {
+      &__btn {
+        text-decoration: none;
+        color: $white;
+        background-color: $moderateCyan;
+        font-size: 1.4rem;
+        font-weight: 700;
+        border-radius: 50px;
+        border: none;
+        padding: 1.9rem 4.35rem;
+
+        &--project {
+          margin-top: 2.8rem;
+          margin-right: 1rem;
+        }
+      }
+
+      &__bookmark {
+        width: 56px;
+        height: 56px;
+      }
+    }
   }
 }
