--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $moderateCyan: hsl(176, 50%, 47%);
 $darkCyan: hsl(176, 72%, 28%);
 $black: hsl(0, 0%, 0%);
 $lightGray: hsla(0, 0%, 48%, 0.096);
+$darkGray: #2f2f2f;
 $gray: hsl(0, 0%, 48%);
 $white: #fff;
 
