--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -9,20 +9,7 @@ html {
   font-family: "Commissioner", sans-serif;
 }
 
-// Flexbox
-
-.flex {
-  display: flex;
-
-  &-jc-sb {
-    justify-content: space-between;
-  }
-
-  &-jc-c {
-    justify-content: center;
-  }
-
-  &-ai-c {
-    align-items: center;
-  }
+body {
+  width: 100%;
+  height: 100vh;
 }
