--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,50 +1,67 @@
 .main {
   position: relative;
+  display: flex;
+  justify-content: center;
 
   &__card {
-    position: absolute;
-    top: -5.6rem;
     background-color: $white;
     border-radius: 10px;
     border: $lightGray solid 1px;
     width: 87.2%;
     text-align: center;
 
-    &__logo {
+    &__container {
+      padding: 4rem 2.5rem;
+
+      &--innerCards {
+        padding: 2.3rem 2.5rem;
+      }
+    }
+
+    &__btn {
+      text-decoration: none;
+      color: $white;
+      border-radius: 50px;
+      border: none;
+      padding: 1.7rem 4.35rem;
+      background-color: $moderateCyan;
+      outline: 0;
+    }
+
+    &--mastercraft {
       position: absolute;
-      top: -2.8rem;
-      left: calc(50% - 2.8rem);
-    }
+      top: -5.6rem;
 
-    &__textMajor {
-      margin: calc(3rem + 2.5rem) auto 0 auto;
-      width: 192px;
-      text-align: center;
-    }
+      &__logo {
+        position: absolute;
+        top: -2.8rem;
+        left: calc(50% - 2.8rem);
+      }
 
-    &__textMinor {
-      font-size: 1.4rem;
-      color: $gray;
-      margin: 2.8rem auto 0 auto;
-      width: 270px;
-    }
+      &__textMajor {
+        margin: calc(3rem + 2.5rem) auto 0 auto;
+        padding: 0 3rem;
+        text-align: center;
+      }
 
-    &__div {
-      margin-top: 2.8rem;
-      padding-bottom: 4rem;
+      &__textMinor {
+        font-size: 1.4rem;
+        color: $gray;
+        margin: 2.8rem auto 0 auto;
+        padding: 0 2.5rem;
+      }
+
+      &__div {
+        margin-top: 2.8rem;
+        padding: 0 2.8rem 4rem 2.8rem;
+      }
 
       &__btn {
-        text-decoration: none;
-        color: $white;
-        border-radius: 50px;
-        border: none;
-        padding: 1.7rem 4.35rem;
-        background-color: $moderateCyan;
-
         &--bookmark {
           img {
+            padding-top: 4px;
             width: 14px;
-            height: 17px;
+            height: 18px;
           }
 
           padding: 1.5rem 1.8rem;
@@ -61,16 +78,110 @@
     &--statistics {
       position: relative;
       top: calc(23rem + 2.4rem);
+
+      &__textValue:not(:first-of-type) {
+        margin-top: 3.8rem;
+      }
+
+      &__textValue {
+        font-size: 3rem;
+      }
+
+      &__textValueTotal {
+        font-size: 1.4rem;
+        margin-top: 1.4rem;
+        color: $gray;
+        position: relative;
+      }
+
+      &__textValueTotal::after {
+        content: "";
+        position: absolute;
+        left: calc(50% - 41px);
+        top: 40px;
+        width: 82px;
+        height: 1px;
+        background-color: $lightGray;
+      }
+
+      &__textValueTotal:last-of-type::after {
+        display: none;
+      }
+
+      &__statusBar {
+        display: block;
+        margin: 3.2rem auto 0 auto;
+        height: 12px;
+        border-radius: 25px;
+        background-color: $moderateCyan;
+      }
     }
 
-    &__textValue {
-      margin-top: 3.8rem;
-      font-size: 3rem;
-    }
+    &--about {
+      position: absolute;
+      top: calc(23rem + 40.4rem + 2.4rem * 2);
+      text-align: start;
 
-    &__textValueTotal {
-      margin-top: 1.4rem;
-      color: $gray;
+      &__majorText {
+        margin-bottom: 3rem;
+      }
+
+      &__minorText {
+        margin-bottom: 3.5rem;
+        font-size: 1.4rem;
+        color: $gray;
+        line-height: 24px;
+      }
+
+      &__innerCards {
+        width: 100%;
+        text-align: start;
+
+        &:not(:last-of-type) {
+          margin-bottom: 2.4rem;
+        }
+
+        h1:first-of-type {
+          font-size: 1.4rem;
+          margin-bottom: 1rem;
+        }
+
+        h2 {
+          color: $moderateCyan;
+          font-weight: 500;
+          font-size: 1.4rem;
+          margin-bottom: 2.5rem;
+        }
+
+        p {
+          color: $gray;
+          font-size: 1.4rem;
+          line-height: 25px;
+          margin-bottom: 2.5rem;
+        }
+
+        h1:last-of-type {
+          font-size: 3.2rem;
+          margin-bottom: 2.5rem;
+
+          span {
+            font-size: 1.4rem;
+            font-weight: 400;
+            color: $gray;
+          }
+        }
+
+        &__btn {
+          &--innerCards {
+            padding: 1.6rem 3.2rem;
+            font-weight: 700;
+          }
+        }
+
+        &--outOfStock {
+          opacity: 50%;
+        }
+      }
     }
   }
 }
