--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +11,25 @@ html {
   font-family: "Commissioner", sans-serif;
 }
 
-body {
-  width: 100%;
-  height: 100vh;
+.container {
+  width: 87.2%;
+  margin: auto;
+
+  &--header {
+    max-width: 1110px;
+  }
+
+  &--main {
+    max-width: 730px;
+  }
+  &--card {
+    padding: 4rem;
+
+    @include media(tablet) {
+      padding: 4rem 2.4rem;
+    }
+  }
+  &--innerCard {
+    padding: 2.4rem;
+  }
 }
