--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -21,12 +21,32 @@
     }
   }
 
+  &__mobile {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 20;
+    display: flex;
+    justify-content: center;
+  }
+
   &__list {
     list-style-type: none;
     display: flex;
 
-    @include media(tablet) {
-      display: none;
+    &--desktop {
+      @include media(tablet) {
+        display: none;
+      }
+    }
+
+    &--mobile {
+      width: 100%;
+      flex-direction: column;
+      background-color: white;
+      border: 1px solid $lightGray;
+      border-radius: 6px;
     }
   }
 
@@ -34,18 +54,38 @@
     a {
       color: $white;
       text-decoration: none;
-      margin-right: 2.5rem;
       font-size: 1.4rem;
       font-weight: 400;
+    }
 
-      &:hover {
-        text-decoration: underline;
+    &--desktop {
+      a {
+        margin-right: 2.5rem;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      &:last-of-type {
+        a {
+          margin-right: unset;
+        }
       }
     }
 
-    &:last-of-type {
+    &--mobile {
       a {
-        margin-right: unset;
+        margin-right: 0;
+        color: black;
+        font-weight: 500;
+        font-size: 1.6rem;
+      }
+
+      padding: 2rem 1.5rem;
+
+      &:not(:last-of-type) {
+        border-bottom: 1px solid $lightGray;
       }
     }
   }
