--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,3 @@
-@import "mixins";
-
 .header {
   background-image: url("../images/image-hero-desktop.jpg");
   background-repeat: no-repeat;
@@ -10,6 +8,12 @@
     padding-top: 5rem;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 30;
+
+    @include media(tablet) {
+      padding-top: 4rem;
+    }
   }
 
   &__menu {
@@ -26,7 +30,7 @@
     top: 100px;
     left: 50%;
     transform: translate(-50%, 0);
-    z-index: 20;
+    z-index: 30;
     display: flex;
     justify-content: center;
   }
@@ -95,4 +99,23 @@
     background-size: cover;
     padding-bottom: 25rem;
   }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.308));
+}
+
+.open {
+  visibility: visible;
+}
+
+.closed {
+  visibility: hidden;
 }
