--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -118,6 +118,11 @@
       padding: 0;
       margin-bottom: 0;
     }
+
+    &--modal-inner {
+      padding: 0;
+      font-size: 1.4rem;
+    }
   }
 
   &__paragraph {
