--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -170,6 +170,10 @@
     &--innerCard {
       line-height: 1.7;
     }
+
+    &--pledge-input {
+      margin-bottom: 0;
+    }
   }
 
   &__buttons {
@@ -225,6 +229,10 @@
     }
 
     &--thank-you {
+      padding: 1em 2em;
+    }
+
+    &--input {
       padding: 1em 2em;
     }
   }
