--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -14,6 +14,10 @@
   border-radius: 10px;
   background-color: $white;
 
+  &:not(:last-of-type) {
+    margin-bottom: 2rem;
+  }
+
   &__content {
     width: 100%;
     position: absolute;
@@ -47,17 +51,19 @@
     border: 1px solid $lightGray;
     border-radius: 100%;
     position: relative;
+  }
 
-    &--inner {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 50%;
-      height: 50%;
-      border: none;
-      background-color: $moderateCyan;
-    }
+  &__circle-inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+    border: none;
+    border-radius: 100%;
+    background-color: $moderateCyan;
+    visibility: hidden;
   }
 
   &--thank-you {
@@ -79,12 +85,50 @@
     margin-left: 2rem;
   }
 
+  &__pledge-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__pledge-input {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 2.4rem;
     border-top: 1px solid $lightGray;
+  }
+
+  &__input {
+    position: relative;
+
+    &::before {
+      content: "$";
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translate(0, -60%);
+      color: $lightGray;
+      font-size: 1.2rem;
+    }
+
+    input {
+      border-radius: 25px;
+      border: 1px solid $lightGray;
+      padding: 1em 2em;
+      max-width: 100px;
+      text-align: center;
+      font-weight: 700;
+
+      &:focus {
+        outline: none;
+      }
+
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
   }
 }
 
@@ -94,4 +138,9 @@
 
 .closed {
   visibility: hidden;
+}
+
+.active {
+  visibility: visible;
+  border-color: $darkCyan;
 }
