--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -1,4 +1,5 @@
 .overlay {
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,9 +23,10 @@
     width: 100%;
     position: absolute;
     z-index: 50;
-    top: 50%;
+    top: 100%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -10%);
+    visibility: hidden;
 
     &--innerCard {
       display: flex;
@@ -39,6 +41,7 @@
     img {
       width: 13px;
       height: 13px;
+      cursor: pointer;
     }
   }
 
@@ -74,6 +77,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    visibility: hidden;
 
     img {
       margin-bottom: 1.5rem;
@@ -91,7 +95,7 @@
   }
 
   &__pledge-input {
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
     padding-top: 2.4rem;
@@ -102,7 +106,7 @@
     position: relative;
 
     &::before {
-      content: "$";
+      content: '$';
       position: absolute;
       top: 50%;
       left: 20px;
@@ -130,17 +134,23 @@
       }
     }
   }
+
+  &__checkmark {
+    margin-top: 2px;
+    height: 13px;
+    width: 13px;
+  }
 }
 
 .open {
   visibility: visible;
 }
 
-.closed {
-  visibility: hidden;
-}
-
 .active {
   visibility: visible;
   border-color: $darkCyan;
+}
+
+.pledge-open {
+  display: flex;
 }
