--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -6,7 +6,11 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Commissioner", sans-serif;
+  font-family: 'Commissioner', sans-serif;
+}
+
+body {
+  position: relative;
 }
 
 .container {
