--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -74,6 +74,11 @@
     padding: 0 0.5rem;
     margin-bottom: 1.5rem;
 
+    span {
+      color: $moderateCyan;
+      margin-left: 1rem;
+    }
+
     &--stats {
       padding: unset;
       font-size: 2.8rem;
@@ -123,6 +128,16 @@
       padding: 0;
       font-size: 1.4rem;
     }
+
+    &--modal-innerCard {
+      font-size: 1.8rem;
+      span {
+        font-size: 1.4rem;
+        color: $gray;
+        font-weight: 400;
+        margin-left: 0;
+      }
+    }
   }
 
   &__paragraph {
@@ -135,7 +150,7 @@
       position: relative;
 
       &::after {
-        content: "";
+        content: '';
         width: 1px;
         height: 60px;
         background-color: $lightGray;
@@ -144,7 +159,7 @@
         right: -50px;
 
         @include media(600px) {
-          content: "";
+          content: '';
           width: 60px;
           height: 1px;
           background-color: $lightGray;
