--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -47,10 +47,10 @@
 
   &__circle {
     flex: 1;
-    max-width: 20px;
-    max-height: 20px;
-    width: 20px;
-    height: 20px;
+    max-width: 15px;
+    max-height: 15px;
+    width: 15px;
+    height: 15px;
     border: 1px solid $lightGray;
     border-radius: 100%;
     position: relative;
@@ -123,7 +123,12 @@
       text-align: center;
       font-weight: 700;
 
+      &::placeholder {
+        color: $lightGray;
+      }
+
       &:focus {
+        border-color: $moderateCyan;
         outline: none;
       }
 
@@ -142,13 +147,23 @@
   }
 }
 
+#modal-basic,
+#modal-bamboo,
+#modal-black,
+#modal-mahogany {
+  cursor: pointer;
+}
+
 .open {
   visibility: visible;
 }
 
 .active {
-  visibility: visible;
   border-color: $darkCyan;
+
+  .modal__circle-inner {
+    visibility: visible;
+  }
 }
 
 .pledge-open {
