--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -57,10 +57,6 @@
       &:not(:last-of-type) {
         margin-bottom: 2.5rem;
       }
-
-      &:last-of-type {
-        opacity: 0.5;
-      }
     }
   }
 
@@ -289,8 +285,13 @@
   }
 
   &__bar {
+    max-width: 100%;
     height: 10px;
     border-radius: 25px;
     background-color: $moderateCyan;
   }
+}
+
+.out-of-stock {
+  opacity: 0.35;
 }
